--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,40 @@
+annotated-types==0.6.0
+anyio==4.3.0
+autopep8==2.3.2
+backoff==2.2.1
+blinker==1.7.0
+certifi==2024.2.2
+cftime==1.6.4.post1
+charset-normalizer==3.3.2
+click==8.1.7
+distlib==0.3.8
+distro==1.9.0
+env==0.1.0
+filelock==3.13.1
 Flask==3.0.0
-flask-cors==4.0.0
-requests==2.31.0
-python-dotenv==1.0.0
+Flask-Cors==4.0.0
+Flask-SQLAlchemy==3.1.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 netCDF4==1.6.5
 numpy==1.26.2
+openai==1.23.6
+opencage==2.4.0
+platformdirs==4.2.0
+pycodestyle==2.14.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+python-dotenv==1.0.0
+requests==2.31.0
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+tqdm==4.66.2
+typing_extensions==4.11.0
+urllib3==2.2.1
+virtualenv==20.25.0
+Werkzeug==3.0.1
