--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,7 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 netCDF4==1.6.5
 numpy==1.26.2
-openai==1.23.6
+openai
 opencage==2.4.0
 platformdirs==4.2.0
 pycodestyle==2.14.0
